kubernetes/apps/base/freshrss/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  labels:
    app.kubernetes.io/name: freshrss
spec:
  ports:
    - port: 80
  selector:
    app.kubernetes.io/name: freshrss
